tests/expectations/compiler/interfaces/inherited_mapping_conflict_fail.out
Error [ECHI03712001]: Interface `Combined` has a conflicting definition for `counter` inherited from `Counter2`. Members with the same name must have identical signatures.
    --> compiler-test:9:1
     |
   9 | interface Combined : Counter1 + Counter2 {}
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Ensure both interfaces define the same signature for this member, or rename one of them.
Error [ECHI03712001]: Interface `Combined` has a conflicting definition for `counter` inherited from `Counter2`. Members with the same name must have identical signatures.
    --> compiler-test:9:1
     |
   9 | interface Combined : Counter1 + Counter2 {}
     | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = Ensure both interfaces define the same signature for this member, or rename one of them.
